// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Default without crashing 1`] = `
<body>
  <div>
    <dialog
      aria-labelledby=":r44:-title"
      aria-modal="true"
      class="rcx-box rcx-box--full rcx-modal"
      data-qa="create-channel-modal"
      open=""
    >
      <form
        class="rcx-box rcx-box--full rcx-modal__inner rcx-css-1e2ego0"
        id=":r44:"
      >
        <header
          class="rcx-box rcx-box--full rcx-modal__header"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__header-inner"
          >
            <h2
              class="rcx-box rcx-box--full rcx-modal__title rcx-css-trljwa rcx-css-lma364"
              id=":r44:-title"
            >
              Create_channel
            </h2>
            <button
              aria-label="Close"
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-trljwa rcx-css-lma364"
              tabindex="-1"
              title="Close"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </header>
        <div
          class="rcx-box rcx-box--full rcx-modal__content rcx-css-1vw7itl"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__content-wrapper rcx-css-rh8v0f"
          >
            <fieldset
              class="rcx-box rcx-box--full rcx-field-group rcx-css-heem01"
              role="group"
            >
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":r45:"
                >
                  Name
                  <span
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
                  >
                    *
                  </span>
                </label>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <label
                    class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
                  >
                    <input
                      aria-describedby=":r45:-error :r45:-hint"
                      aria-invalid="false"
                      aria-required="true"
                      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
                      data-qa-type="channel-name-input"
                      id=":r45:"
                      name="name"
                      size="1"
                      type="text"
                    />
                    <span
                      class="rcx-box rcx-box--full rcx-input-box__addon"
                    >
                      <i
                        aria-hidden="true"
                        class="rcx-box rcx-box--full rcx-icon--name-hashtag-lock rcx-icon rcx-css-4pvxx3"
                      >
                        
                      </i>
                    </span>
                  </label>
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":r45:-hint"
                >
                  No_spaces_or_special_characters
                </span>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":r46:"
                >
                  Topic
                </label>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <input
                    aria-describedby=":r46:-hint"
                    class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
                    data-qa-type="channel-topic-input"
                    id=":r46:"
                    name="topic"
                    size="1"
                    type="text"
                  />
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":r46:-hint"
                >
                  Displayed_next_to_name
                </span>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":r4c:"
                >
                  Members
                </label>
                <div
                  class="rcx-box rcx-box--full rcx-select"
                  data-qa="create-channel-users-autocomplete"
                  data-qa-type="user-auto-complete-input"
                  id=":r4c:"
                >
                  <div
                    class="rcx-box rcx-box--full rcx-css-1sr8su7"
                  >
                    <div
                      class="rcx-box rcx-box--full rcx-css-w398ts"
                      role="listbox"
                    >
                      <input
                        aria-haspopup="listbox"
                        class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-css-trljwa rcx-css-pqpp8q"
                        placeholder="Add_people"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <label
                    class="rcx-box rcx-box--full rcx-field__label rcx-label"
                    for=":r47:"
                  >
                    Private
                  </label>
                  <label
                    class="rcx-box rcx-box--full rcx-toggle-switch"
                  >
                    <input
                      aria-describedby=":r47:-hint"
                      checked=""
                      class="rcx-box rcx-box--full rcx-toggle-switch__input"
                      id=":r47:"
                      type="checkbox"
                    />
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                    />
                  </label>
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":r47:-hint"
                >
                  People_can_only_join_by_being_invited
                </span>
              </div>
            </fieldset>
            <div
              class="rcx-box rcx-box--full rcx-box--animated rcx-accordion"
            >
              <section
                class="rcx-box rcx-box--full rcx-accordion-item"
              >
                <div
                  aria-controls=":r4e:"
                  aria-expanded="false"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__bar"
                  role="button"
                  tabindex="0"
                >
                  <h2
                    class="rcx-box rcx-box--full rcx-accordion-item__title"
                    id=":r4d:"
                  >
                    Advanced_settings
                  </h2>
                  <span
                    class="rcx-box rcx-box--full rcx-chevron"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-f8dsuo"
                    >
                      
                    </i>
                  </span>
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__panel"
                  id=":r4e:"
                >
                  <fieldset
                    class="rcx-box rcx-box--full rcx-field-group"
                    role="group"
                  >
                    <h5
                      class="rcx-box rcx-box--full rcx-field-group__item rcx-css-1rcvt7i"
                    >
                      Security_and_permissions
                    </h5>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r48:"
                        >
                          Federation_Matrix_Federated
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r48:-hint"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":r48:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":r48:-hint"
                      >
                        error-this-is-a-premium-feature
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r4a:"
                        >
                          Encrypted
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r4a:-hint"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":r4a:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":r4a:-hint"
                      >
                        Not_available_for_this_workspace
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r49:"
                        >
                          Read_only
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r49:-hint"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":r49:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":r49:-hint"
                      >
                        Anyone_can_send_new_messages
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r4b:"
                        >
                          Broadcast
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            id=":r4b:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                    </div>
                  </fieldset>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-modal__footer rcx-css-17mu816"
        >
          <div
            class="rcx-button-group rcx-button-group--align-end"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button rcx-button-group__item"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button rcx-button-group__item"
              data-qa-type="create-channel-confirm-button"
              type="submit"
            >
              <span
                class="rcx-button--content"
              >
                Create
              </span>
            </button>
          </div>
        </div>
      </form>
    </dialog>
  </div>
</body>
`;

exports[`renders DefaultVersion2 without crashing 1`] = `
<body>
  <div>
    <dialog
      aria-labelledby=":r4f:-title"
      aria-modal="true"
      class="rcx-box rcx-box--full rcx-modal"
      data-qa="create-channel-modal"
      open=""
    >
      <form
        class="rcx-box rcx-box--full rcx-modal__inner rcx-css-1e2ego0"
        id=":r4f:"
      >
        <header
          class="rcx-box rcx-box--full rcx-modal__header"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__header-inner"
          >
            <h2
              class="rcx-box rcx-box--full rcx-modal__title rcx-css-trljwa rcx-css-lma364"
              id=":r4f:-title"
            >
              Create_channel
            </h2>
            <button
              aria-label="Close"
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-trljwa rcx-css-lma364"
              tabindex="-1"
              title="Close"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </header>
        <div
          class="rcx-box rcx-box--full rcx-modal__content rcx-css-1vw7itl"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__content-wrapper rcx-css-rh8v0f"
          >
            <fieldset
              class="rcx-box rcx-box--full rcx-field-group rcx-css-heem01"
              role="group"
            >
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":r4g:"
                >
                  Name
                  <span
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-label__required rcx-css-b7g1a9"
                  >
                    *
                  </span>
                </label>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <label
                    class="rcx-box rcx-box--full rcx-label rcx-box rcx-box--full rcx-box--animated rcx-input-box__wrapper"
                  >
                    <input
                      aria-describedby=":r4g:-error :r4g:-hint"
                      aria-invalid="false"
                      aria-required="true"
                      class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box--type-text rcx-input-box"
                      data-qa-type="channel-name-input"
                      id=":r4g:"
                      name="name"
                      size="1"
                      type="text"
                    />
                    <span
                      class="rcx-box rcx-box--full rcx-input-box__addon"
                    >
                      <i
                        aria-hidden="true"
                        class="rcx-box rcx-box--full rcx-icon--name-hashtag-lock rcx-icon rcx-css-4pvxx3"
                      >
                        
                      </i>
                    </span>
                  </label>
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":r4g:-hint"
                >
                  No_spaces_or_special_characters
                </span>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":r4h:"
                >
                  Topic
                </label>
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <input
                    aria-describedby=":r4h:-hint"
                    class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
                    data-qa-type="channel-topic-input"
                    id=":r4h:"
                    name="topic"
                    size="1"
                    type="text"
                  />
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":r4h:-hint"
                >
                  Displayed_next_to_name
                </span>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <label
                  class="rcx-box rcx-box--full rcx-field__label rcx-label"
                  for=":r4n:"
                >
                  Members
                </label>
                <div
                  class="rcx-box rcx-box--full rcx-select"
                  data-qa="create-channel-users-autocomplete"
                  data-qa-type="user-auto-complete-input"
                  id=":r4n:"
                >
                  <div
                    class="rcx-box rcx-box--full rcx-css-1sr8su7"
                  >
                    <div
                      class="rcx-box rcx-box--full rcx-css-w398ts"
                      role="listbox"
                    >
                      <input
                        aria-haspopup="listbox"
                        class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-css-trljwa rcx-css-pqpp8q"
                        placeholder="Add_people"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
              <div
                class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
              >
                <span
                  class="rcx-box rcx-box--full rcx-field__row"
                >
                  <label
                    class="rcx-box rcx-box--full rcx-field__label rcx-label"
                    for=":r4i:"
                  >
                    Private
                  </label>
                  <label
                    class="rcx-box rcx-box--full rcx-toggle-switch"
                  >
                    <input
                      aria-describedby=":r4i:-hint"
                      checked=""
                      class="rcx-box rcx-box--full rcx-toggle-switch__input"
                      id=":r4i:"
                      type="checkbox"
                    />
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                    />
                  </label>
                </span>
                <span
                  class="rcx-box rcx-box--full rcx-field__hint"
                  id=":r4i:-hint"
                >
                  People_can_only_join_by_being_invited
                </span>
              </div>
            </fieldset>
            <div
              class="rcx-box rcx-box--full rcx-box--animated rcx-accordion"
            >
              <section
                class="rcx-box rcx-box--full rcx-accordion-item"
              >
                <div
                  aria-controls=":r4p:"
                  aria-expanded="false"
                  class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__bar"
                  role="button"
                  tabindex="0"
                >
                  <h2
                    class="rcx-box rcx-box--full rcx-accordion-item__title"
                    id=":r4o:"
                  >
                    Advanced_settings
                  </h2>
                  <span
                    class="rcx-box rcx-box--full rcx-chevron"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-f8dsuo"
                    >
                      
                    </i>
                  </span>
                </div>
                <div
                  class="rcx-box rcx-box--full rcx-box--animated rcx-accordion-item__panel"
                  id=":r4p:"
                >
                  <fieldset
                    class="rcx-box rcx-box--full rcx-field-group"
                    role="group"
                  >
                    <h5
                      class="rcx-box rcx-box--full rcx-field-group__item rcx-css-1rcvt7i"
                    >
                      Security_and_permissions
                    </h5>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r4j:"
                          id=":r4j:-label"
                        >
                          Federation_Matrix_Federated
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r4j:-hint"
                            aria-labelledby=":r4j:-label"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":r4j:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":r4j:-hint"
                      >
                        error-this-is-a-premium-feature
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r4l:"
                          id=":r4l:-label"
                        >
                          Encrypted
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r4l:-hint"
                            aria-labelledby=":r4l:-label"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":r4l:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":r4l:-hint"
                      >
                        Not_available_for_this_workspace
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r4k:"
                          id=":r4k:-label"
                        >
                          Read_only
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r4k:-hint"
                            aria-labelledby=":r4k:-label"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            disabled=""
                            id=":r4k:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                      <span
                        class="rcx-box rcx-box--full rcx-field__hint"
                        id=":r4k:-hint"
                      >
                        Anyone_can_send_new_messages
                      </span>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-field rcx-field-group__item"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-field__row"
                      >
                        <label
                          class="rcx-box rcx-box--full rcx-field__label rcx-label"
                          for=":r4m:"
                          id=":r4m:-label"
                        >
                          Broadcast
                        </label>
                        <label
                          class="rcx-box rcx-box--full rcx-toggle-switch"
                        >
                          <input
                            aria-describedby=":r4m:-hint"
                            aria-labelledby=":r4m:-label"
                            class="rcx-box rcx-box--full rcx-toggle-switch__input"
                            id=":r4m:"
                            type="checkbox"
                          />
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
                          />
                        </label>
                      </span>
                    </div>
                  </fieldset>
                </div>
              </section>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-modal__footer rcx-css-17mu816"
        >
          <div
            class="rcx-button-group rcx-button-group--align-end"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button rcx-button-group__item"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button--primary rcx-button rcx-button-group__item"
              data-qa-type="create-channel-confirm-button"
              type="submit"
            >
              <span
                class="rcx-button--content"
              >
                Create
              </span>
            </button>
          </div>
        </div>
      </form>
    </dialog>
  </div>
</body>
`;
